force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/CRMG_GTM__GTM_Attendees__c.object-meta.xml
<CustomObject>
    <label>GTM Attendee</label>
    <nameField>
        <displayFormat>ATT-{0000}</displayFormat>
        <label>Attendee #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GTM Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>