force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/fields/CRMG_GTM__Attendee_Email__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Attendee_Email__c</fullName>
    <description>The attendee&apos;s email address</description>
    <inlineHelpText>The attendee&apos;s email address</inlineHelpText>
    <label>Attendee Email</label>
    <type>Email</type>
</CustomField>