force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/fields/CRMG_GTM__Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Attendee_Name__c</fullName>
    <description>The attendee&apos;s full name</description>
    <inlineHelpText>The attendee&apos;s full name</inlineHelpText>
    <label>Attendee Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>