force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/fields/CRMG_GTM__Email__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Email__c</fullName>
    <description>Email address of meeting organizer</description>
    <inlineHelpText>Email address of meeting organizer</inlineHelpText>
    <label>Organizer Email</label>
    <type>Email</type>
</CustomField>