force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/fields/CRMG_GTM__Email_With_Date__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Email_With_Date__c</fullName>
    <label>Email With Date</label>
    <length>200</length>
    <type>Text</type>
</CustomField>