force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/fields/CRMG_GTM__End_Time__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__End_Time__c</fullName>
    <description>End time of meeting instance</description>
    <inlineHelpText>End time of meeting instance</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>