force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/fields/CRMG_GTM__GTM_Meeting_Detail__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__GTM_Meeting_Detail__c</fullName>
    <label>GTM Detail</label>
    <referenceTo>CRMG_GTM__Meeting__c</referenceTo>
    <relationshipLabel>GTM Attendees</relationshipLabel>
    <relationshipName>GTM_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>