force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/fields/CRMG_GTM__Is_Organiser__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Is_Organiser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Organiser</label>
    <type>Checkbox</type>
</CustomField>