force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/fields/CRMG_GTM__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Last_Name__c</fullName>
    <description>The surname of the meeting organizer</description>
    <inlineHelpText>The surname of the meeting organizer</inlineHelpText>
    <label>Organizer Last Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>