force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/fields/CRMG_GTM__Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Meeting_ID__c</fullName>
    <description>GTM Meeting ID</description>
    <inlineHelpText>GTM Meeting ID</inlineHelpText>
    <label>Meeting ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>