force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/fields/CRMG_GTM__Name__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Name__c</fullName>
    <description>Attendee&apos;s full name</description>
    <inlineHelpText>Attendee&apos;s full name</inlineHelpText>
    <label>Organizer Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>