force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/fields/CRMG_GTM__Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Number_of_Attendees__c</fullName>
    <description>The number of attendees at the meeting instance</description>
    <inlineHelpText>The number of attendees at the meeting instance</inlineHelpText>
    <label>Number of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>