force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/fields/CRMG_GTM__Organizer_Key__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Organizer_Key__c</fullName>
    <description>The key of the meeting organizer</description>
    <inlineHelpText>The key of the meeting organizer</inlineHelpText>
    <label>Organizer Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>