force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/fields/CRMG_GTM__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Start_Time__c</fullName>
    <description>Start time of meeting instance</description>
    <inlineHelpText>Start time of meeting instance</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>