force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/fields/CRMG_GTM__Subject__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Subject__c</fullName>
    <description>Subject of Meeting</description>
    <inlineHelpText>Subject of Meeting</inlineHelpText>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>