force-app/main/default/objects/CRMG_GTM__GTM_Attendees__c/listViews/CRMG_GTM__All.listView-meta.xml
<ListView>
    <fullName>CRMG_GTM__All</fullName>
    <columns>CRMG_GTM__GTM_Meeting_Detail__c</columns>
    <columns>CRMG_GTM__Attendee_Name__c</columns>
    <columns>NAME</columns>
    <columns>CRMG_GTM__Name__c</columns>
    <columns>CRMG_GTM__Subject__c</columns>
    <columns>CRMG_GTM__Meeting_ID__c</columns>
    <columns>CRMG_GTM__Start_Time__c</columns>
    <columns>CRMG_GTM__End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>